force-app/main/default/objects/Invoice/fields/AgingBucket__c.field-meta.xml
<CustomField>
    <fullName>AgingBucket__c</fullName>
    <formula>IF(DaysOverdue__c = 0, "Current",
  IF(DaysOverdue__c &lt;= 30, "1-30 Days",
    IF(DaysOverdue__c &lt;= 60, "31-60 Days",
      IF(DaysOverdue__c &lt;= 90, "61-90 Days",
        "90+ Days"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Bucket</label>
    <type>Text</type>
</CustomField>