force-app/main/default/objects/Invoice/fields/AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>AmountPaid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>