force-app/main/default/objects/Invoice/fields/BalanceDue__c.field-meta.xml
<CustomField>
    <fullName>BalanceDue__c</fullName>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>