force-app/main/default/objects/Invoice/fields/CollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatus__c</fullName>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Partially Paid</fullName><default>false</default><label>Partially Paid</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>In Collections</fullName><default>false</default><label>In Collections</label></value>
            <value><fullName>Written Off</fullName><default>false</default><label>Written Off</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>