force-app/main/default/objects/Invoice/fields/DaysOverdue__c.field-meta.xml
<CustomField>
    <fullName>DaysOverdue__c</fullName>
    <formula>IF(AND(ISPICKVAL(Status, "Posted"), DueDate &lt; TODAY()), TODAY() - DueDate, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>