force-app/main/default/objects/Invoice/fields/DunningLevel__c.field-meta.xml
<CustomField>
    <fullName>DunningLevel__c</fullName>
    <label>Dunning Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <type>Number</type>
</CustomField>