force-app/main/default/objects/Invoice/fields/LastDunningDate__c.field-meta.xml
<CustomField>
    <fullName>LastDunningDate__c</fullName>
    <label>Last Dunning Date</label>
    <type>Date</type>
</CustomField>